2022-11-09_tieto_kubernetes/kubernetes-training/01_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: simple-hello-world
  labels:
    app: simple-hello-world
    svc: example
spec:
  containers:
    - name: main
      image: ondrejsika/training-example
      ports:
        - containerPort: 80
      resources:
        requests:
          memory: 20Mi
          cpu: 10m
        limits:
          memory: 40Mi
          cpu: 20m
