2022-11-09_tieto_kubernetes/kubernetes-training/04_04_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  annotations:
    kubernetes.io/change-cause: apache
spec:
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: hello-world-deploy
  replicas: 2
  template:
    metadata:
      labels:
        app: hello-world-deploy
        svc: example
    spec:
      containers:
        - name: hello-world
          image: httpd
          ports:
            - containerPort: 80
          startupProbe:
            httpGet:
              path: /
              port: 80
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              memory: 20Mi
              cpu: 20m
