2022-11-09_tieto_kubernetes/kubernetes-training/nfs-volume-example.yml
apiVersion: v1
kind: Pod
metadata:
  name: nfs-volume-example
  labels:
    svc: example
spec:
  containers:
    - name: nginx
      image: sikalabs/nginx-public
      resources:
        requests:
          cpu: 20m
          memory: 30Mi
        limits:
          cpu: 50m
          memory: 50Mi
      ports:
        - containerPort: 80
      volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: data
  volumes:
    - name: data
      nfs:
        path: /nfs
        server: 104.248.31.39
