2022-11-09_tieto_kubernetes/kubernetes-training/probes_startup.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: startup
  labels:
    app: startup
spec:
  replicas: 10
  selector:
    matchLabels:
      app: startup
  template:
    metadata:
      labels:
        app: startup
        svc: example
    spec:
      containers:
        - image: sikalabs/slu:v0.54.0
          command:
            - /bin/sh
            - -c
          args:
            - slu sleep random --min 0 --max 30000 && slu example-server -p 80
          name: main
          startupProbe:
            httpGet:
              path: /
              port: 80
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 10Mi
              cpu: 20m
            limits:
              memory: 20Mi
              cpu: 50m
---
apiVersion: v1
kind: Service
metadata:
  name: startup
spec:
  type: ClusterIP
  selector:
    app: startup
  ports:
    - port: 80
