2022-11-09_tieto_kubernetes/kubernetes-training/ingress-example.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example
spec:
  ingressClassName: nginx
  tls:
    - secretName: k8s-sikademo-com-tls
  rules:
    - host: k8s.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example
                port:
                  number: 80
