2022-11-09_tieto_kubernetes/kubernetes-training/ingress-paths.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webservers-paths
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
spec:
  rules:
    - host: 127.0.0.1.nip.io
      http:
        paths:
          - path: /nginx(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
          - path: /apache(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: apache
                port:
                  number: 80
    - host: localhost
      http:
        paths:
          - path: /nginx(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
          - path: /apache(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: apache
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example
                port:
                  number: 80
